Añadido el texto para el código de doble factor en múltiples archivos de localización

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1616,11 +1616,12 @@
     "try-again-later": "Provi de nou més tard",
     "tuesday": "Dimarts",
     "two-factor-auth": "Autenticació en 2 passos",
-    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
+    "two-factor-auth-disable": "Desactivar autenticació en 2 passos",
     "two-factor-auth-disabled": "Autenticació en 2 passos desactivada",
     "two-factor-auth-enable": "Activar l'autenticació en 2 passos",
     "two-factor-auth-enabled": "Autenticació en 2 passos activada",
     "two-factor-auth-p": "Configura l'app Google Authenticator utilitzant el QR, introdueix aquí el codi i prem verificar per completar el procés d'activació.",
+    "two-factor-code": "Codi de doble factor",
     "two-factor-enabled": "Activar autenticació en 2 passos",
     "type": "Tipus",
     "type-alert": "Tipus alerta",
