--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1621,6 +1621,7 @@
     "two-factor-auth-enable": "Aktivovat dvoufaktorové ověření",
     "two-factor-auth-enabled": "Dvoufázové ověření je aktivováno",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
+    "two-factor-code": "Código de doble factor",
     "two-factor-enabled": "Aktivovat dvoufázovou autentizaci",
     "type": "Tipo",
     "type-alert": "Tipo alert",
@@ -1693,7 +1694,7 @@
     "vat-regularization": "Regularización de IVA",
     "vehicle": "Vehículo",
     "verified": "Verificado",
-    "verify": "Verificar",
+    "verify": "Ověřit",
     "version": "Versión",
     "video": "Video",
     "vies-check-success": "Číslo '%vat-number%' je registrováno v systému VIES",
