--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -225,7 +225,7 @@
     "center": "Erdian",
     "certificate": "Ziurtagiria",
     "change": "Aldatu",
-    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
+    "change-password-online-warning": "Instalazio hau online egongo bada, pasahitza seguruago batez aldatu beharko litzateke.",
     "channel": "Kanala",
     "charge-date": "Kobratzeko data",
     "chart": "Grafikoa",
@@ -1375,7 +1375,7 @@
     "second-hand": "Bigarren eskukoa",
     "second-quarter": "2. hiruhilekoa",
     "second-trimester": "Bigarren hiruhilekoa",
-    "security-warning": "Aviso de seguridad",
+    "security-warning": "Segurtasun ohartarazpena",
     "select": "Aukeratu",
     "select-all": "Guztiak hautatu",
     "select-content-for": "%content%-erako eduki hautatu",
@@ -1621,7 +1621,8 @@
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
     "two-factor-auth-enabled": "Bi pausoko autentifikazioa aktibatuta",
     "two-factor-auth-p": "Google Authenticator aplikazioa QR erabiliz konfiguratu, hemen kodea sartu eta prozesuaren aktibazioari amaiera emateko balidatu.",
-    "two-factor-enabled": "Bi pausoetako autentifikazioa aktibatu",
+    "two-factor-code": "Bi faktoreko kodea",
+    "two-factor-enabled": "Bi pausoko autentifikazioa aktibatu",
     "type": "Mota",
     "type-alert": "Alerta mota",
     "type-critical": "Mota kritikoa",
