--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1375,7 +1375,7 @@
     "second-hand": "Używane",
     "second-quarter": "2 kwartał",
     "second-trimester": "Drugi trymestr",
-    "security-warning": "Aviso de seguridad",
+    "security-warning": "Ostrzeżenie o bezpieczeństwie",
     "select": "Wybierz",
     "select-all": "Zaznacz wszystko",
     "select-content-for": "Wybierz zawartość dla %content%",
@@ -1414,7 +1414,7 @@
     "serierb": "Seria RB",
     "series": "Serie",
     "server": "Serwer",
-    "server-software": "Software del servidor",
+    "server-software": "Oprogramowanie serwera",
     "service": "Usługa",
     "services": "Usługi",
     "settings": "Ustawienia",
@@ -1616,11 +1616,12 @@
     "try-again-later": "Spróbuj ponownie później",
     "tuesday": "Wtorek",
     "two-factor-auth": "Uwierzytelnianie dwuskładnikowe",
-    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
+    "two-factor-auth-disable": "Dezaktywuj uwierzytelnianie dwuetapowe",
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
+    "two-factor-code": "Código de doble factor",
     "two-factor-enabled": "Aktywuj uwierzytelnianie w 2 krokach",
     "type": "Typ",
     "type-alert": "Typ alarmu",
