--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1617,10 +1617,11 @@
     "tuesday": "terça-feira",
     "two-factor-auth": "Autenticação em 2 etapas",
     "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
-    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-disabled": "Autenticação em 2 passos desativada",
     "two-factor-auth-enable": "Ativar a autenticação em 2 passos",
     "two-factor-auth-enabled": "Autenticação em 2 etapas ativada",
     "two-factor-auth-p": "Configura o aplicativo Google Authenticator usando o QR, insira o código aqui e pressione verificar para completar o processo de ativação.",
+    "two-factor-code": "Código de doble factor",
     "two-factor-enabled": "Ativar autenticação em 2 etapas",
     "type": "Tipo",
     "type-alert": "Tipo de alerta",
