--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1621,6 +1621,7 @@
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
     "two-factor-auth-enabled": "Two-factor authentication enabled",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
+    "two-factor-code": "Código de doble factor",
     "two-factor-enabled": "Enable 2-Step Authentication",
     "type": "Type",
     "type-alert": "Type alert",
