--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1421,7 +1421,7 @@
     "settlement": "Liquidazione",
     "settlement-product": "Prodotto di liquidazione",
     "settlements": "regolamenti",
-    "setup-manually": "Configuración manual",
+    "setup-manually": "Configurazione manuale",
     "setup-options": "Opzioni di installazione",
     "shipping": "Spedizione",
     "shipping-address": "Indirizzo di spedizione",
@@ -1621,6 +1621,7 @@
     "two-factor-auth-enable": "Attivare l'autenticazione a due fattori",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
+    "two-factor-code": "Código de doble factor",
     "two-factor-enabled": "Attivare l'autenticazione a due fattori",
     "type": "tipo",
     "type-alert": "Tipo di avviso",
