Pequeñas correcciones al test de productos y a las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -785,7 +785,7 @@
     "infostate-component-title": "Egoera informazioa",
     "initial-number": "Hasierako zenbakia",
     "insert-update": "Gehitu edo aldatu",
-    "installation": "Instalación",
+    "installation": "Instalazioa",
     "installed": "Instalatua",
     "installed-plugins": "Instalatuak",
     "installer": "Instalatzailea",
@@ -1617,7 +1617,7 @@
     "tuesday": "Asteartea",
     "two-factor-auth": "Bi faktoreren autentifikazioa",
     "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
-    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-disabled": "Bi faktoreren autentifikazioa desgaituta",
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
     "two-factor-auth-enabled": "Bi pausoko autentifikazioa aktibatuta",
     "two-factor-auth-p": "Google Authenticator aplikazioa QR erabiliz konfiguratu, hemen kodea sartu eta prozesuaren aktibazioari amaiera emateko balidatu.",
