--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1619,7 +1619,7 @@
     "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
     "two-factor-auth-enable": "Aktivieren Sie die 2-Faktor-Authentifizierung",
-    "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
+    "two-factor-auth-enabled": "Die Zwei-Faktor-Authentifizierung ist aktiviert.",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-code": "Código de doble factor",
     "two-factor-enabled": "Zwei-Faktor-Authentifizierung aktivieren",
