--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1616,12 +1616,12 @@
     "try-again-later": "Try again later",
     "tuesday": "Tuesday",
     "two-factor-auth": "2-step authentication",
-    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
+    "two-factor-auth-disable": "Disable two-factor authentication",
     "two-factor-auth-disabled": "Two-factor authentication disabled",
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
     "two-factor-auth-enabled": "Two-factor authentication enabled",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
-    "two-factor-code": "Código de doble factor",
+    "two-factor-code": "Two-factor code",
     "two-factor-enabled": "Enable 2-Step Authentication",
     "type": "Type",
     "type-alert": "Type alert",
