--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1616,7 +1616,7 @@
     "try-again-later": "Riprova più tardi",
     "tuesday": "Martedì",
     "two-factor-auth": "Autenticazione a due fattori",
-    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
+    "two-factor-auth-disable": "Disattivare l'autenticazione a due fattori",
     "two-factor-auth-disabled": "Autenticazione a due fattori disattivata",
     "two-factor-auth-enable": "Attivare l'autenticazione a due fattori",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
