Actualizadas las traducciones

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -785,7 +785,7 @@
     "infostate-component-title": "Status Information",
     "initial-number": "Initial number",
     "insert-update": "Add or modify",
-    "installation": "Instalación",
+    "installation": "Installation",
     "installed": "Installed",
     "installed-plugins": "Installed",
     "installer": "Installer",
