--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1049,7 +1049,7 @@
     "no-gaps-found": "Ningún oco atopado",
     "no-invoice": "Sen factura",
     "no-outstanding-amount": "Non hai importe pendente",
-    "no-plugins-installed": "No hay plugins instalados",
+    "no-plugins-installed": "Non hai plugins instalados",
     "no-print-permission": "Non ten permiso para imprimir ou exportar",
     "no-reference": "Sen referencia",
     "no-selected-item": "Ningún elemento seleccionado",
