--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1375,7 +1375,7 @@
     "second-hand": "Di seconda mano",
     "second-quarter": "Secondo trimestre",
     "second-trimester": "Secondo trimestre",
-    "security-warning": "Aviso de seguridad",
+    "security-warning": "Avviso di sicurezza",
     "select": "Seleziona",
     "select-all": "Seleziona tutto",
     "select-content-for": "Seleziona contenuto per %content%",
@@ -1620,7 +1620,7 @@
     "two-factor-auth-disabled": "Autenticazione a due fattori disattivata",
     "two-factor-auth-enable": "Attivare l'autenticazione a due fattori",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
-    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
+    "two-factor-auth-p": "Configura l'app Google Authenticator utilizzando il QR, inserisci qui il codice e premi verifica per completare il processo di attivazione.",
     "two-factor-code": "Código de doble factor",
     "two-factor-enabled": "Attivare l'autenticazione a due fattori",
     "type": "tipo",
