--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1618,7 +1618,7 @@
     "two-factor-auth": "Autenticação em 2 passos",
     "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
     "two-factor-auth-disabled": "Autenticação em 2 passos desativada",
-    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enable": "Ativar autenticação em 2 passos",
     "two-factor-auth-enabled": "Autenticação em 2 etapas ativada",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
     "two-factor-code": "Código de doble factor",
