--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1414,14 +1414,14 @@
     "serierb": "Série RB",
     "series": "séries",
     "server": "serveur:",
-    "server-software": "Software del servidor",
+    "server-software": "Logiciel du serveur",
     "service": "Service",
     "services": "Services",
     "settings": "Ajustes",
     "settlement": "Règlement",
     "settlement-product": "settlement-product",
     "settlements": "Règlements",
-    "setup-manually": "Configuración manual",
+    "setup-manually": "Configuration manuelle",
     "setup-options": "Options de configuration",
     "shipping": "Livraison",
     "shipping-address": "Adresse de livraison",
@@ -1619,7 +1619,7 @@
     "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
     "two-factor-auth-disabled": "Authentification à deux facteurs désactivée",
     "two-factor-auth-enable": "Activer l'authentification à deux facteurs",
-    "two-factor-auth-enabled": "Authentification en 2 étapes activée",
+    "two-factor-auth-enabled": "Authentification à 2 facteurs activée",
     "two-factor-auth-p": "Configurez l'application Google Authenticator en utilisant le QR, entrez le code ici et appuyez sur vérifier pour compléter le processus d'activation.",
     "two-factor-code": "Código de doble factor",
     "two-factor-enabled": "Activer l’authentification à deux facteurs",
