--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -225,7 +225,7 @@
     "center": "Centro",
     "certificate": "Certificado",
     "change": "Cambiar",
-    "change-password-online-warning": "Se esta instalación vai estar online, debería cambiar a contrasinal por unha máis segura.",
+    "change-password-online-warning": "Se esta instalación vai estar online, debería mudar o contrasinal por un máis seguro.",
     "channel": "Canal",
     "charge-date": "Data cargo",
     "chart": "Gráfico",
@@ -543,7 +543,7 @@
     "end-date": "Data de finalización",
     "end-month": "Mes de fin",
     "end-time": "Hora de remate",
-    "environment": "Entorno",
+    "environment": "Eido",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo de epígrafos",
     "epigraphs": "Epígrafos",
