--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -785,7 +785,7 @@
     "infostate-component-title": "Statusinformation",
     "initial-number": "Anfangsnummer",
     "insert-update": "Einfügen oder aktualisieren",
-    "installation": "Instalación",
+    "installation": "Installation",
     "installed": "installiert",
     "installed-plugins": "Installierte Plugins",
     "installer": "FacturaScripts 2018 (Alpha) Installationsprogramm",
