--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1617,11 +1617,11 @@
     "tuesday": "Wtorek",
     "two-factor-auth": "Uwierzytelnianie dwuskładnikowe",
     "two-factor-auth-disable": "Dezaktywuj uwierzytelnianie dwuetapowe",
-    "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
+    "two-factor-auth-disabled": "Dwustopniowa weryfikacja została wyłączona",
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
     "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
-    "two-factor-code": "Código de doble factor",
+    "two-factor-code": "Kod dwóch czynników",
     "two-factor-enabled": "Aktywuj uwierzytelnianie w 2 krokach",
     "type": "Typ",
     "type-alert": "Typ alarmu",
