--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1041,7 +1041,7 @@
     "next": "Next",
     "nick": "Nick",
     "no": "No",
-    "no-admin": "No administrador",
+    "no-admin": "Not an administrator",
     "no-data": "No data",
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-document-selected": "No document has been selected",
