Added database connection in DbQuery initialization and updated translations in multiple language files

--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1064,7 +1064,7 @@
     "not-enough-stock": "Non hai suficientes existencias de %reference%",
     "not-passed-integrity-check": "Algúns arquivos non pasaron a verificación de integridade ... <br\/>Podes <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter máis detalles aquí<\/a>.",
     "not-public": "Non público",
-    "not-registered": "No registrada",
+    "not-registered": "Non rexistrada",
     "not-sent": "Non enviado",
     "not-stored-content": "Contido non almacenado",
     "not-valid-email": "Email %email% non válido",
@@ -1616,7 +1616,7 @@
     "try-again-later": "Probe de novo máis tarde",
     "tuesday": "Martes",
     "two-factor-auth": "Autenticación en dous pasos",
-    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
+    "two-factor-auth-disable": "Desactivar a autenticación en 2 pasos",
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
     "two-factor-auth-enable": "Activar autenticación en 2 pasos",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
