--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -225,7 +225,7 @@
     "center": "Centro",
     "certificate": "Certificato",
     "change": "cambiamento",
-    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
+    "change-password-online-warning": "Se questa installazione sarà online, dovrebbe cambiare la password con una più sicura.",
     "channel": "canale",
     "charge-date": "Data del addebito",
     "chart": "Grafico",
