--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -225,7 +225,7 @@
     "center": "Centre",
     "certificate": "Certificat",
     "change": "Canviar",
-    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
+    "change-password-online-warning": "Si esta instal·lació va a estar online, hauria de canviar la contrasenya per una més segura.",
     "channel": "Canal",
     "charge-date": "Data de càrrec",
     "chart": "Gràfic",
