--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1620,7 +1620,7 @@
     "two-factor-auth-disabled": "Autenticação em 2 passos desativada",
     "two-factor-auth-enable": "Ativar autenticação em 2 passos",
     "two-factor-auth-enabled": "Autenticação em 2 etapas ativada",
-    "two-factor-auth-p": "Configura la app Google Authenticator usando el QR, introduce aquí el código y pulsa verificar para completar el proceso de activación.",
+    "two-factor-auth-p": "Configure a app Google Authenticator usando o QR, introduza aqui o código e pressione verificar para completar o processo de ativação.",
     "two-factor-code": "Código de dupla autenticação",
     "two-factor-enabled": "Ativar autenticação em 2 passos",
     "type": "Tipo",
